i finished the project about node js

--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
-<div>
-  <h1>this the main page of the website!</h1>
-  <div class="flex"><button>about</button> <button>contact me</button></div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div>
+      <h1>this the main page of the website!</h1>
+      <div class="flex">
+        <a href="/about">
+          <button>About</button>
+        </a>
+        <a href="/contact-me">
+          <button>Contact Me</button>
+        </a>
+      </div>
+    </div>
+  </body>
+</html>
