--- a/404.html
+++ b/404.html
@@ -1,4 +1,16 @@
-<div>
-  <h1>wow you aren't suppose to be here let me guide you back to our page!</h1>
-  <div class="flex"><button>main page</button></div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div>
+      <h1>
+        wow you aren't suppose to be here let me guide you back to our page!
+      </h1>
+      <div class="flex"><button>main page</button></div>
+    </div>
+  </body>
+</html>
