--- a/about.html
+++ b/about.html
@@ -1,7 +1,19 @@
-<div>
-  <h1>I am 20 years old and i love to code!</h1>
-  <div class="flex">
-    <button>main page</button>
-    <button>contact me</button>
-  </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div>
+      <h1>I am 20 years old and i love to code!</h1>
+      <div class="flex">
+        <a href="/"> <button>main page</button></a>
+        <a href="/contact-me">
+          <button>Contact Me</button>
+        </a>
+      </div>
+    </div>
+  </body>
+</html>
