--- a/contact-me.html
+++ b/contact-me.html
@@ -1,4 +1,19 @@
-<div>
-  <h1>this is my contact information newContact@gmail.com</h1>
-  <div class="flex"><button>main page</button> <button>about</button></div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div>
+      <h1>this is my contact information newContact@gmail.com</h1>
+      <div class="flex">
+        <a href="/"> <button>main page</button></a>
+        <a href="/about">
+          <button>About</button>
+        </a>
+      </div>
+    </div>
+  </body>
+</html>
